[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="package_test_TheOctoGirl"
version = "0.0.1"
authors = [{name="TheOctoGirl"}]
description = "A test package for packaging"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/TheOctoGirl/package-test"
"Bug Tracker" = "https://github.com/TheOctoGirl/package-test/issues"